--- a/index.html
+++ b/index.html
@@ -31,15 +31,13 @@
             <span class="sr-only">Toggle navigation</span>
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="#">Project name</a>
+          <a class="navbar-brand" href="#">PetriFi</a>
         </div>
         <div id="navbar" class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
             <li class="active"><a href="#">Home</a></li>
-            <li><a href="#about">About</a></li>
-            <li><a href="#contact">Contact</a></li>
+            <li><a href="http://goo.gl/forms/kG2uRtN5EXVr4ZKs1" target="_blank">Application</a></li>
           </ul>
         </div><!--/.nav-collapse -->
       </div>
@@ -47,9 +45,8 @@
 
     <div class="container">
 
-      <div class="starter-template">
-        <h1>Bootstrap starter template</h1>
-        <p class="lead">Use this document as a way to quickly start any new project.<br> All you get is this text and a mostly barebones HTML document.</p>
+      <div>
+        <img class="text-center" src="petrifi.png"/>
       </div>
 
     </div><!-- /.container -->
