--- a/index.html
+++ b/index.html
@@ -43,12 +43,8 @@
       </div>
     </nav>
 
-    <div class="container">
-
-      <div>
-        <img class="text-center" src="petrifi.png"/>
-      </div>
-
+    <div class="container text-center">
+      <img src="petrifi_trimmed.png"/>
     </div><!-- /.container -->
 
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
