--- a/index.html
+++ b/index.html
@@ -38,6 +38,8 @@
           <ul class="nav navbar-nav">
             <li class="active"><a href="#">Home</a></li>
             <li><a href="http://goo.gl/forms/kG2uRtN5EXVr4ZKs1" target="_blank">Application</a></li>
+            <li><a href="https://docs.google.com/spreadsheets/d/1x1s815bA75SJZ4v2IEv4rDefCn7EDKV6wU-e4mPWv_8/edit?usp=sharing" target="_blank">Members</a></li>
+            <li><a href="https://docs.google.com/spreadsheets/d/1YeesvGLMP6pj_Q8CTkr84ryNQ2p6dW1z2QwVPcQpiS4/edit?usp=sharing" target="_blank">Leagues</a></li>
           </ul>
         </div><!--/.nav-collapse -->
       </div>
