--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     </nav>
 
     <div class="container text-center">
-      <img src="petrifi_trimmed.png"/>
+      <img id="logo" src="petrifi_trimmed.png"/>
     </div><!-- /.container -->
 
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
