--- a/index.html
+++ b/index.html
@@ -24,6 +24,9 @@
   
   </head>
   <body>
+    <div id="header">
+      <img id="banner" src="petrifi_icon_trans.png">
+    </div>
     <nav class="navbar navbar-inverse navbar-fixed-top">
       <div class="container">
         <div class="navbar-header">
@@ -32,7 +35,6 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="#">PetriFi</a>
         </div>
         <div id="navbar" class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
@@ -45,8 +47,8 @@
       </div>
     </nav>
 
-    <div class="container text-center">
-      <img id="logo" src="petrifi_trimmed.png"/>
+    <div class="container">
+      <iframe src="https://discordapp.com/widget?id=187664826724646912&theme=dark" width="350" height="500" allowtransparency="true" frameborder="0"></iframe>
     </div><!-- /.container -->
 
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
