--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <div id="header">
       <img id="banner" src="petrifi_icon_trans.png">
     </div>
-    <nav class="navbar navbar-inverse navbar-fixed-top">
+    <nav class="navbar navbar-inverse">
       <div class="container">
         <div class="navbar-header">
           <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
@@ -47,7 +47,7 @@
       </div>
     </nav>
 
-    <div class="container">
+    <div class="container text-center">
       <iframe src="https://discordapp.com/widget?id=187664826724646912&theme=dark" width="350" height="500" allowtransparency="true" frameborder="0"></iframe>
     </div><!-- /.container -->
 
