--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
   </head>
   <body>
     <div id="header">
-      <img id="banner" src="petrifi_icon_trans.png">
+          <a href="/" target="_blank"><img id="banner" src="petrifi_icon_trans.png"></a>
     </div>
     <nav class="navbar navbar-inverse">
       <div class="container">
@@ -38,10 +38,8 @@
         </div>
         <div id="navbar" class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
-            <li class="active"><a href="#">Discord</a></li>
+            <li class="active"><a href="https://discord.gg/012zUmRJAdTXIr3fc">Discord</a></li>
             <li><a href="http://goo.gl/forms/kG2uRtN5EXVr4ZKs1" target="_blank">Apply to PetriFi</a></li>
-            <li><a href="https://docs.google.com/spreadsheets/d/1x1s815bA75SJZ4v2IEv4rDefCn7EDKV6wU-e4mPWv_8/edit?usp=sharing" target="_blank">Members</a></li>
-            <li><a href="https://docs.google.com/spreadsheets/d/1YeesvGLMP6pj_Q8CTkr84ryNQ2p6dW1z2QwVPcQpiS4/edit?usp=sharing" target="_blank">Leagues</a></li>
           </ul>
         </div><!--/.nav-collapse -->
       </div>
